# R2D2

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  README.md  watch.sh
Body/: README.md
Body/BodyJetson/: Justfile  docker-compose.yml
Body/BodyJetson/action_layer/: Dockerfile  README.md
Body/BodyJetson/action_layer/ros2_ws/src/behavior_manager/: README-md  package.xml  setup.cfg  setup.py
Body/BodyJetson/action_layer/ros2_ws/src/behavior_manager/behavior_manager/: behavior_base.py  behavior_manager.py  behavior_manager_node.py
Body/BodyJetson/action_layer/ros2_ws/src/behavior_manager/behavior_manager/skills/: follow_track.py
Body/BodyJetson/action_layer/ros2_ws/src/behavior_manager/launch/: behavior_manager.launch.py
Body/BodyJetson/action_layer/ros2_ws/src/behavior_msgs/: CMakeLists.txt  package.xml
Body/BodyJetson/action_layer/ros2_ws/src/behavior_msgs/action/: FollowTrack.action
Body/BodyJetson/base/: Dockerfile
Body/BodyJetson/camera_relay/: Dockerfile  README.md
Body/BodyJetson/camera_relay/ros2_ws/src/camera_relay/: CMakeLists.txt  package.xml
Body/BodyJetson/camera_relay/ros2_ws/src/camera_relay/include/camera_relay/: gst_jpeg_decoder.hpp
Body/BodyJetson/camera_relay/ros2_ws/src/camera_relay/launch/: camera_relay.launch.py
Body/BodyJetson/camera_relay/ros2_ws/src/camera_relay/src/: camera_info_relay_node.cpp  camera_stream_relay_node.cpp  gst_jpeg_decoder.cpp
Body/BodyJetson/central_comm/: Dockerfile  Justfile  README.md  controller-connect.sh
Body/BodyJetson/central_comm/ros2_ws/src/bms_reader/: package.xml  setup.cfg  setup.py
Body/BodyJetson/central_comm/ros2_ws/src/bms_reader/bms_reader/: BMS.py  bms.py  bms_node.py
Body/BodyJetson/central_comm/ros2_ws/src/body_mpu_reader/: CMakeLists.txt  package.xml
Body/BodyJetson/central_comm/ros2_ws/src/body_mpu_reader/include/body_mpu_reader/: body_mpu_node.hpp  mpu6500.hpp
Body/BodyJetson/central_comm/ros2_ws/src/body_mpu_reader/src/: body_mpu_node.cpp  body_mpu_node_main.cpp  mpu6500.cpp
Body/BodyJetson/central_comm/ros2_ws/src/serial_msg/: CMakeLists.txt
Body/BodyJetson/central_comm/ros2_ws/src/serial_msg/msg/: MotorCommand.msg
Body/BodyJetson/central_comm/ros2_ws/src/serial_msg/srv/: DeviceCommand.srv
Body/BodyJetson/central_comm/ros2_ws/src/xiao_bridge/: package.xml  setup.cfg
Body/BodyJetson/central_comm/ros2_ws/src/xiao_bridge/xiao_bridge/: Test.py  XiaoESP32C3.py  bridge_node.py
Body/BodyJetson/central_comm/src/tcp_msg/: CMakeLists.txt  package.xml
Body/BodyJetson/central_comm/src/tcp_msg/msg/: MPU6500Sample.msg
Body/BodyJetson/foxglove_bridge/: Dockerfile
Body/BodyJetson/ros_network/: cyclonedds.xml
Body/BodyJetson/visual_perception/: README.md  dockerfile
Body/BodyJetson/visual_perception/ros2_ws/src/scene_understanding/: README.md  package.xml  setup.cfg  setup.py
Body/BodyJetson/visual_perception/ros2_ws/src/scene_understanding/launch/: scene_understanding.launch.py
Body/BodyJetson/visual_perception/ros2_ws/src/scene_understanding/scene_understanding/: image_preprocessor.py  scene_understanding_node.py  tensor_rt_engine.py  yolo_decoder.py
Body/BodyJetson/visual_perception/ros2_ws/src/visual_perception_bringup/: package.xml  setup.cfg  setup.py
Body/BodyJetson/visual_perception/ros2_ws/src/visual_perception_bringup/launch/: visual_perception.launch.py
Body/BodyJetson/web_ui/: Dockerfile  README.md
Body/BodyJetson/web_ui/ros2_ws/src/ui_bridge/: README.md  package.xml  setup.cfg  setup.py
Body/BodyJetson/web_ui/ros2_ws/src/ui_bridge/ui_bridge/: README.md  api_node.py  config.py  ros_bridge.py  ros_introspection.py  ros_types.py  serialize.py  web_app.py
Body/BodyJetson/web_ui/ros2_ws/src/ui_bridge_cpp/: CMakeLists.txt  package.xml
Body/BodyJetson/web_ui/ros2_ws/src/ui_bridge_cpp/src/: bridge_node.cpp  bridge_node.hpp  http_server.cpp  http_server.hpp  http_session.cpp  http_session.hpp  json_helpers.hpp  main.cpp  mjpeg_session.cpp  mjpeg_session.hpp  ws_session.cpp  ws_session.hpp
Body/BodyPico_MotorControl/: .clang-tidy  Justfile  README.md  build.py  compile_commands.json  platformio.ini
Body/BodyPico_MotorControl/src/: HeadMotor.cpp  HeadMotor.h  MotorControl.cpp  MotorControl.h  SerialProcessor.cpp  SerialProcessor.h  debug.h  main.cpp
Head/: README.md
Head/HeadRaspberry/: CommandProcessor.py  CommandServer.py  Justfile  Lid.py  Nob.py  SerialProcessor.py  docker-compose.yml
Head/HeadRaspberry/ros-camera/: Dockerfile  README.md
Head/HeadRaspberry/ros-serial/: Dockerfile
Head/HeadRaspberry/ros-serial/src/serial_msg/: package.xml
Head/HeadRaspberry/ros_network/: cyclonedds.xml
Head/HeadUno/: CameraTiltActuator.cpp  CameraTiltActuator.h  HeadUno.ino  Lid.cpp  Lid.h  Nob.cpp  Nob.h  README.md  SerialProcessor.cpp  SerialProcessor.h
Head/HeadXiao4x26/: .clangd  FunctionProcessor.cpp  FunctionProcessor.h  HeadXiao4x26.ino  Justfile  LedMatrix.cpp  LedMatrix.h  Matrix.cpp  Matrix.h  README.md  SerialProcessor.cpp  SerialProcessor.h
Head/HeadXiao8x8/: FunctionProcessor.cpp  FunctionProcessor.h  HeadXiao8x8.ino  Max7219.cpp  Max7219.h  README.md  SerialProcessor.cpp  SerialProcessor.h
LeftLeg/: README.md
LeftLeg/LeftLegEsp32c3/: LeftLegEsp32c3.ino  MPU6500.cpp  MPU6500.h  README.md  Stepper.cpp  Stepper.h  TCPprocessor.cpp  TCPprocessor.h
RightLeg/: README.md
RightLeg/RightLegEsp32c3/: MPU6500.cpp  MPU6500.h  README.md  RightLegEsp32c3.ino  TCPprocessor.cpp  TCPprocessor.h  secrets_template.h
Tests/Head/HeadLids/: Lid.cpp
Tests/Head/Nobs/: Lid.h  Nob.cpp  SerialProcessor.cpp  SerialProcessor.h
Tests/Head/NobsTestPy/: NobTest.py  testing.py
Tests/Head/SN74HC595N/: SN74HC595N.ino
Tests/HeadLids/: CommandProcessor.cpp  CommandProcessor.h  HeadLids.ino  Lid.h
Tests/Max7219LedMatrix/: Max7219LedMatrix.ino
Tests/NobsTestPy/: NobTest.py
Tests/PWMBoard/: PWMBoard.ino
docker/: Justfile  docker-compose.yml
docker/services/: jetson-central-comm-new.Dockerfile
pico/pico-ctrl/: .clang-format  .clang-tidy  .gitignore  Justfile  build.py  generate-clangd.sh  pico-ctrl.ino  platformio.ini
(+118 files in other folders)
