<?xml version="1.0"?>
<package format="3">
  <name>serial_msg</name>
  <version>0.1.0</version>
  <description>Custom messages and services for serial communication</description>
  <maintainer email="max.eberhard@gmx.net">Your Name</maintainer>
  <license>Apache-2.0</license>

   <!-- This line is required for any package that declares custom .msg/.srv -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Build tools -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <!-- Dependencies for generating and using messages/services -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
</package>
