<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>body_mpu_reader</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="max.eberhard@gmx.net">root</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>tcp_msg</depend>
  <depend>serial_msg</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
