<?xml version="1.0"?>
<package format="3">
  <!-- The package name must match the folder name -->
  <name>xiao_bridge</name>


  <version>0.1.0</version>


  <description>
    ROS2 node for Wlan communication with ESP32C3 devices.
  </description>

  <maintainer email="max.eberhard@gmx.net">Max</maintainer>

  <license>Apache-2.0</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>example_interfaces</depend>
  <depend>std_srvs</depend>
  <depend>tcp_msg</depend>
 
  
  <!-- Export python only build type-->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
