<?xml version="1.0"?>
<package format="3">
  <!-- The package name must match the folder name -->
  <name>scene_understanding</name>

  <version>0.1.0</version>

  <description>
    ROS2 node for TensorRT-based visual scene understanding and object detection.
  </description>

  <maintainer email="max.eberhard@gmx.net">Max</maintainer>

  <license>Apache-2.0</license>

  <!-- Runtime dependencies -->
  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>vision_msgs</depend>
  <depend>cv_bridge</depend>

  <!-- Export python only build type-->
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>