<?xml version="1.0"?>
<package format="3">
  <name>visual_perception_bringup</name>

  <version>0.1.0</version>

  <description>
    Bringup package for the visual perception stack.
  </description>

  <maintainer email="max.eberhard@gmx.net">Max</maintainer>

  <license>Apache-2.0</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>scene_understanding</exec_depend>
  <exec_depend>tracking</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>