<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ui_bridge</name>
  <version>0.0.1</version>
  <description>Web UI bridge (FastAPI/WebSocket) for ROS 2</description>

  <maintainer email="max.eberhard@gmx.net">max</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- Runtime deps -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- Camera topics -->
  <exec_depend>sensor_msgs</exec_depend>

  <!-- Custom interfaces -->
  <exec_depend>tcp_msg</exec_depend>
  <exec_depend>serial_msg</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>