<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ui_bridge_cpp</name>
  <version>0.0.1</version>
  <description>Web UI bridge (C++, Boost Beast)</description>
  <maintainer email="max@todo.todo">max</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>

  <depend>sensor_msgs</depend>
  <depend>tcp_msg</depend>

  <build_depend>libboost-dev</build_depend>
  <build_depend>rapidjson-dev</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
